--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app" ng-strict-di ng-cloak>
   <head>
     <meta charset="utf-8">
-    <title ncy-breadcrumb-text="{{ncyBreadcrumbChain}} (Foodsaving)" ncy-breadcrumb-text-separator=" · "></title>
+    <title title-text></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
